# sg_search

./: .gitignore  Cargo.toml  README.md  RUN.md
doc/: principle.md
src/: lib.rs
src/analyzer/: analyzer.rs  char_filter.rs  error.rs  mod.rs  token_filter.rs  tokenizer.rs
src/index/: constants.rs  document.rs  mod.rs  norm.rs  posting_block.rs  postings.rs  term_index.rs
src/index/writer/: config.rs  error.rs  mod.rs
src/query/: error.rs  mod.rs  query.rs  score.rs
src/store/: error.rs  file_lock.rs  mod.rs  packed_id_array.rs  packed_int_array.rs  skip_list.rs  store_io.rs
test_documents/: 1  2  3  4  5  6
